fix list lines to align

--- a/output/css/skeleton.css
+++ b/output/css/skeleton.css
@@ -299,11 +299,11 @@ label > .label-body {
 /* Lists
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 ul {
-  list-style: circle inside; }
+  list-style: circle outside; }
 ol {
-  list-style: decimal inside; }
+  list-style: decimal outside; }
 ol, ul {
-  padding-left: 0;
+  padding-left: 2rem;
   margin-top: 0; }
 ul ul,
 ul ol,
